--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <a href="#" data-target="home">首页</a>
       <a href="#" data-target="about">关于我们</a>
       <a href="#" data-target="solutions">解决方案</a>
-      <a href="#" data-target="services">服务</a>
+      <a href="#" data-target="services">技术与服务</a>
       <a href="#" data-target="contact">联系我们</a>
     </nav>
     <div class="hamburger" onclick="toggleSidebar()">
