--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
       <div class="solutions-grid">
         <div class="solution-item">
           <h3>集成电路设计</h3>
-          <p>提供完整的集成电路设计解决方案，包括：</p>
+          <p>提供完整的集成电路设计解决方案</p>
           <ul>
             <li>数字电路设计</li>
             <li>模拟电路设计</li>
