--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 
 <body>
   <header>
-    <h1 class="navbar">上海爱斯利嘉半导体科技有限公司</h1>
+    <h1 class="navbar">
+      <img src="images/logo.svg" alt="爱斯利嘉logo" class="company-logo">
+      上海爱斯利嘉半导体科技有限公司
+    </h1>
     <nav class="navbar">
       <a href="#" data-target="home">首页</a>
       <a href="#" data-target="about">关于我们</a>
@@ -200,7 +203,7 @@
       <h2>联系我们</h2>
       <div class="contact-info">
         <div class="contact-details">
-          <h3>直接联系方式</h3>
+          <h3>联系方式</h3>
           <p><strong>联系电话：</strong>021-XXXX-XXXX</p>
           <p><strong>联系人：</strong>陶经理</p>
           <p><strong>工作时间：</strong>周一至周五 9:00-18:00</p>
